Subo corrección luego del error

--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
             </div>
         </div>
         <div class="aboutMe-curso">
+        
+        </div>
+        <div class="aboutMe">
             <h2>Cursos Realizados</h2>
             <ul>Curso 1</ul>
             <ul>Curso 2</ul>
@@ -76,23 +79,24 @@
                 <label for="messagge" class="text">What!?</label></br>
                 <textarea id="messagge" type="text" class="messagge" placeholder="Write what u want"></textarea></br>
                 <button type="submit">Send ♥</button>
+       
             </form>
         </div>
         <div class="redes">
             <div class="redes">
-                <a href="https://www.linkedin.com/in/natii-fortuna/">
+                <a href="https://www.linkedin.com/in/natii-fortuna/" target="_blank">
                 <img src="./Images/linkedin-icon.png" alt="Linkedin icon" class="redes-icon">
                 <p class="red">LinkedIn</p>
             </a>
             </div>
             <div class="redes">
-                <a href="https://www.instagram.com/srita.fulana/">
+                <a href="https://www.instagram.com/srita.fulana/" target="_blank">
                     <img src="./Images/instagram-icon.png" alt="Instagram icon"  class="redes-icon">
                     <p class="red">Instagram</p>
                 </a>
             </div>
             <div class="redes">
-                <a href="https://github.com/Vitan8892">
+                <a href="https://github.com/Vitan8892" target="_blank">
                 <img src="./Images/github-icon.png" alt="gitHub icon"  class="redes-icon">
                 <p class="red">gitHub</p>
                 </a>
@@ -102,7 +106,7 @@
                 <p class="red">natiifortuna@gmail.com</p>
             </div> -->
             <div class="redes">
-                <a href="https://t.me/V_tann">
+                <a href="https://t.me/V_tann" target="_blank">
                     <img src="./Images/telegram-icon.png" alt="Telegram icon"  class="redes-icon">
                     <p class="red">Telegram</p>
                 </a>
