--- a/index.html
+++ b/index.html
@@ -51,22 +51,48 @@
                 <p>React.js</p>
             </div>
         </div>
-        <div class="aboutMe-curso">
         
-        </div>
-        <div class="aboutMe">
+        <div class="aboutMe-curso">
             <h2>Cursos Realizados</h2>
             <ul>Curso 1</ul>
             <ul>Curso 2</ul>
             <ul>Curso 3</ul>
             <ul>Curso 4</ul>
         </div>
+
     </div>
     <div id="contenedor-projects">
-        <div class="project1"></div>
-        <div class="project2"></div>
-        <div class="project3"></div>
-        <div class="project4"></div>
+        <h1 class="Tproject">My Projects</h1>
+       <div class="box">
+        <div class="project memoTest">
+            <h1 class="hproject">Memo Test Game</h1>
+            <p class="pproject">Play this simple and cute game for your brain, coded with html, CSS and JavaScript, by me and youtube ♥</br>
+        Still wroking on it.</p>
+            <a href="#" class="aproject">View more -></a>
+        </div>
+        <div class="project toDoList">
+            <h1 class="hproject">To Do List</h1>
+            <p class="pproject">This was a faste project made whith online tutors. </br>
+            We use html, CSS and JavaScript.
+            </p>
+            <a href="#" class="aproject">View more -></a>
+        </div>
+        <div class="project pokeAPI">
+            <h1 class="hproject">Pokémon Number</h1>
+            <p class="pproject">Just intro the number of your choise and see which Pokémon is.</p>
+            <a href="#" class="aproject">View more -></a>
+        </div>
+        <div class="project more">
+            <h1 class="hproject">More Projects</h1>
+            <p class="pproject">Come to my gitHub profile to see all my progres and projects. ♥</p>
+            <a href="#" class="aproject">View more -></a>
+        </div>
+       <!--<div class="project">
+            <h1 class="hproject"></h1>
+            <p class="pproject"></p>
+            <a href="#" class="aproject">View more -></a>
+        </div>-->
+       </div>
     </div>
     <div id="contenedor-contact">
         <h1 class="contact">Contact Me</h1>
