--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <h1 class="me">A little bit of me</h1>
         <div class="aboutMe">
             <h2>Who I am</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam laoreet ultrices erat, ut tempus massa sodales vel. Nulla pellentesque diam sed rutrum fringilla. Nunc ultricies bibendum eros viverra sollicitudin. Curabitur aliquet, tellus non consequat pretium, tortor nibh tempus neque, non aliquam nisl dolor id felis. Donec euismod risus ut lacus pharetra, at eleifend justo volutpat. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Integer malesuada, nibh at tincidunt accumsan, arcu dolor cursus dolor, nec tincidunt elit massa a magna.</p>
+            <p>Versatile individual capable of multitasking. Extensive experience in work environments where commitment and teamwork are highly valued. Known for my dynamism, proactivity, and enthusiasm. I have strong digital skills and seek to develop professionally.</p>
         </div>
         <div class="aboutMe-aptitude">
             <h2>Aptitudes</h2>
